--- a/communication/templates/communication/alert/list.html
+++ b/communication/templates/communication/alert/list.html
@@ -125,7 +125,7 @@
           >
             Imagem
           </button>
-          <form action="">
+          <form action="{% url 'alerts' %}">
             <div class="flex flex-col gap-4 md:flex-row md:gap-8 md:pr-16">
               <div class="flex flex-1 flex-col gap-1">
                 <label for="txt-res">Resposta:</label>
