made classroom buttons sticky

--- a/core/static/core/css/main.css
+++ b/core/static/core/css/main.css
@@ -88,7 +88,8 @@ nav#navbar {
   width: 0 !important;
 }
 
-button[type="submit"] {
+button[type="submit"],
+.active {
   @apply rounded-full border-2 border-color-secondary bg-color-hover px-5 py-2 font-bold text-yellow-700;
 }
 
