added test filter

--- a/grades/templates/grades/provas.html
+++ b/grades/templates/grades/provas.html
@@ -1,22 +1,108 @@
 {% extends 'core/base.html' %} {% load static %} {% block head %} {% load permission_tags %}
 <title>Provas</title>
+<script defer>
+  document.addEventListener("alpine:init", () => {
+    Alpine.data("provas", () => ({
+      filterDialog: false,
+    }));
+  });
+</script>
 {% endblock %} {% block content %}
-<main class="mx-10 mb-20 mt-4 md:mx-14">
-  <h1 class="text-center md:text-left">
+<main class="mx-10 mb-20 mt-4 md:mx-14" x-data="provas">
+  <section class="dialog-backdrop" x-show="filterDialog">
+    <div class="dialog">
+      <header>
+        <h2>Filtrar</h2>
+        <button @click.prevent="filterDialog = false">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="h-6 w-6"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M6 18L18 6M6 6l12 12"
+            />
+          </svg>
+        </button>
+      </header>
+      <form
+        action="{% url 'provas' cls %}"
+        method="get"
+        class="flex flex-col gap-2"
+      >
+        <div class="mb-1 flex items-center gap-2">
+          <label for="sl-kind">Tipo:</label>
+          <select name="kind" id="sl-kind">
+            <option value="A">Atividade</option>
+          </select>
+          {% if user|has_role:'student' %}
+          <label for="sl-subj">Matéria:</label>
+          <select name="subject" id="sl-subj">
+            {% for s in subjects %}
+            <option value="{{ s.pk }}">{{ s.name }}</option>
+            {% endfor %}
+          </select>
+          {% elif user|has_role:'teacher' %}
+          <label for="sl-cls">Turma:</label>
+          <select name="classroom" id="sl-cls">
+            {% for c in classrooms %}
+            <option value="{{ c.pk }}">{{ c }}</option>
+            {% endfor %}
+          </select>
+          {% endif %}
+        </div>
+        <div class="flex flex-row justify-between gap-2 text-lg font-normal">
+          <label>
+            De:
+            <input
+              type="date"
+              name="start-date"
+              class="rounded-3xl border-color-primary"
+          /></label>
+          <label>
+            Até:
+            <input
+              type="date"
+              name="end-date"
+              class="rounded-3xl border-color-primary"
+          /></label>
+        </div>
+        <div class="mt-3 flex justify-center gap-3">
+          <a class="alt" href="{% url 'provas' cls %}">Limpar</a>
+          <button type="submit">Aplicar</button>
+        </div>
+      </form>
+    </div>
+  </section>
+  <h1 class="flex justify-between text-center md:text-left">
     Provas e Atividades
+
+    <button @click="filterDialog = true">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        fill="none"
+        viewBox="0 0 24 24"
+        stroke-width="1.5"
+        stroke="currentColor"
+        class="h-7 w-7"
+      >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          d="M10.5 6h9.75M10.5 6a1.5 1.5 0 11-3 0m3 0a1.5 1.5 0 10-3 0M3.75 6H7.5m3 12h9.75m-9.75 0a1.5 1.5 0 01-3 0m3 0a1.5 1.5 0 00-3 0m-3.75 0H7.5m9-6h3.75m-3.75 0a1.5 1.5 0 01-3 0m3 0a1.5 1.5 0 00-3 0m-9.75 0h9.75"
+        />
+      </svg>
+    </button>
   </h1>
 
-  {% if user|has_role:'teacher' %}
-  <ul class="mt-10 flex gap-4">
-    {% for c in classrooms %}
-    <a class="alt px-5 py-3" href="{% url 'provas' c.pk %}"> {{ c }} </a>
-    {% endfor %}
-  </ul>
-  {% endif %}
-  
   {% for t in tests %}
   <div
-    class="rounded-2xl bg-gray-100 shadow mb-5"
+    class="mb-5 rounded-2xl bg-gray-100 shadow"
     x-data="{ options: false, details: false }"
   >
     <header class="flex justify-between px-6 py-4">
@@ -78,7 +164,6 @@
         <p>Sobre: <span>{{ t.get_kind_display }}</span></p>
         <p>{{ t.content }}</p>
       </div>
-      
     </div>
   </div>
   {% endfor %}
