--- a/grades/templates/grades/provas.html
+++ b/grades/templates/grades/provas.html
@@ -4,6 +4,12 @@
   document.addEventListener("alpine:init", () => {
     Alpine.data("provas", () => ({
       filterDialog: false,
+      deleteDialog: false,
+      pk: 0,
+      del(pk) {
+        this.pk = pk;
+        this.deleteDialog = true;
+      }
     }));
   });
 </script>
@@ -79,6 +85,44 @@
       </form>
     </div>
   </section>
+
+  <section class="dialog-backdrop" x-show="deleteDialog">
+    <div class="dialog">
+      <form
+        action="{% url 'delete_prova' cls %}"
+        method="post"
+        class="flex flex-col items-center gap-3"
+      >
+        {% csrf_token %}
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          class="h-16 w-16 text-red-500"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M12 9v3.75m-9.303 3.376c-.866 1.5.217 3.374 1.948 3.374h14.71c1.73 0 2.813-1.874 1.948-3.374L13.949 3.378c-.866-1.5-3.032-1.5-3.898 0L2.697 16.126zM12 15.75h.007v.008H12v-.008z"
+          />
+        </svg>
+        <p class="text-center">
+          Cuidado! Isso pode <br />
+          desalocar notas e menções.
+        </p>
+        <input type="hidden" name="pk" x-model="pk" />
+        <div class="flex gap-3">
+          <button @click.prevent="deleteDialog = false" class="alt">
+            Voltar
+          </button>
+          <button type="submit">Confirmar</button>
+        </div>
+      </form>
+    </div>
+  </section>
+
   <h1 class="flex justify-between text-center md:text-left">
     Provas e Atividades
 
@@ -150,8 +194,7 @@
           class="absolute z-10 flex flex-col gap-2 rounded-lg border border-slate-400 bg-gray-100 p-3"
           @click.away="() => options = false"
         >
-          <button class="hover:text-color-secondary">Editar</button>
-          <button class="hover:text-color-secondary">Excluir</button>
+          <button class="hover:text-color-secondary" @click="del('{{ t.pk }}')">Excluir</button>
         </div>
       </div>
     </header>
