--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -1,14 +1,5 @@
 {% extends 'core/base.html' %} {% load static %} {% load permission_tags %} {% block head %}
-<script defer>
-  const carousel1Swiper = new Swiper(".carousel1", {
-    slidesPerView: 1,
-    keyboard: { enabled: false },
-    navigation: {
-      nextEl: ".carousel1 .swiper-button-next",
-      prevEl: ".carousel1 .swiper-button-prev",
-    },
-  });
-</script>
+<script defer src="{% static 'core/js/dashboard.js' %}"></script>
 <link rel="stylesheet" href="{% static 'core/dist/css/dashboard.css' %}" />
 <title>Home</title>
 {% endblock %} {% block content %}
