Changes on navbar complete names

--- a/core/templates/core/navbar.html
+++ b/core/templates/core/navbar.html
@@ -398,6 +398,7 @@
             <span>
               <span>{{ user.username.split.0.title }}</span>
               <span>{{ user.username.split.1.title }}</span>
+              <span>{{ user.username.split.2.title }}</span>
             </span>
             <span class="block truncate">{{ user.email }}</span>
           </div>
