--- a/core/templates/core/boletim.html
+++ b/core/templates/core/boletim.html
@@ -92,40 +92,19 @@
     </div>
     <div class="flex flex-col gap-3">
       <span class="info bg-color-primary-dimm text-white">Instrumento</span>
-      <span class="info bg-color-grey">oii</span>
+      <span class="info bg-color-grey">Questionário em grupo</span>
     </div>
     <div class="flex flex-col gap-3">
       <span class="info bg-color-primary-dimm text-white">Datas</span>
-      <span class="info bg-color-grey">08/11/2005</span>
+      <span class="info bg-color-grey">21/11/2023</span>
     </div>
     <div class="flex flex-col gap-3">
       <span class="info bg-color-primary-dimm text-white">Menção</span>
-      <span class="info bg-color-grey">MB</span>
+      <span class="info bg-color-grey">B</span>
     </div>
     <div class="flex flex-col gap-3">
       <span class="info bg-color-primary-dimm text-white">Observação</span>
-      <span class="info bg-color-grey">
-        <form method="POST">
-          {% if request.user.is_superuser %} {% csrf_token %}
-          <input
-            type="text"
-            name="obs"
-            class="info w-[100%] bg-color-grey"
-            maxlength="200"
-            placeholder="Escreva Aqui!"
-          />
-          <div class="flex justify-center pt-1">
-            <button type="submit" class="rounded-lg bg-color-secondary pt-3">
-              Enviar
-            </button>
-          </div>
-          {% else %}
-          <div class="w-[100%] cursor-not-allowed rounded-full bg-color-grey">
-            <p name="obs_student" value="{{ request.POST.obs }}" readonly></p>
-          </div>
-          {% endif %}
-        </form>
-      </span>
+      <span class="info bg-color-grey">-</span>
     </div>
   </section>
 </main>
